fixed a typo in the StockActivity xml, cleanup other code